Add swagger doc.
